docker/envoy/envoy.yaml
node:
  id: node0
  cluster: cluster.local

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
t       typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service_mirage }
            - name: reverse_proxy
              domains: ["*.*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: reverse_proxy }
          http_filters:
          - name: envoy.filters.http.router

  clusters:
    - name: service_mirage
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_mirage
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: mirage
                  port_value: 8080

    - name: reverse_proxy
      type: EDS
      connect_timeout: 0.25s
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      eds_cluster_config:
        eds_config:
          api_config_source:
            api_type: GRPC
            grpc_services:
              envoy_grpc:
                cluster_name: xds_cluster

    - name: xds_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
        - lb_endpoints:
            endpoint:
              address:
                socket_address:
                  address: mirage
                  port_value: 5000
